# vidyeet-cli

./: .gitignore  AGENTS.md  Cargo.toml  MACHINE_API.md  README.md  config.toml  user-default.toml
docs/: API_UPLOAD_PROGRESS.md  API_VIDEO_SPECIFICATION.md  ARCHITECTURE.md  AUTHENTICATION_DESIGN.md  CLI_CONTRACT.md  CONFIGURATION.md  DESIGN_PHILOSOPHY.md  ERROR_HANDLING.md  TESTING_STRATEGY.md
src/: cli.rs  error_severity.rs  main.rs
src/api/: auth.rs  client.rs  error.rs  mod.rs  types.rs
src/commands/: delete.rs  help.rs  list.rs  login.rs  logout.rs  mod.rs  result.rs  show.rs  status.rs  upload.rs
src/config/: app.rs  error.rs  mod.rs  permissions.rs  user.rs
src/domain/: error.rs  formatter.rs  mod.rs  progress.rs  validator.rs
src/presentation/: input.rs  mod.rs  output.rs  progress.rs
